; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2661.c_rt2661_resume.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ral/extr_rt2661.c_rt2661_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rt2661_softc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rt2661_resume(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.rt2661_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.rt2661_softc*
  store %struct.rt2661_softc* %5, %struct.rt2661_softc** %3, align 8
  %6 = load %struct.rt2661_softc*, %struct.rt2661_softc** %3, align 8
  %7 = getelementptr inbounds %struct.rt2661_softc, %struct.rt2661_softc* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load %struct.rt2661_softc*, %struct.rt2661_softc** %3, align 8
  %13 = call i32 @rt2661_init(%struct.rt2661_softc* %12)
  br label %14

14:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @rt2661_init(%struct.rt2661_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
